--- a/README
+++ b/README
@@ -1,1 +1,7 @@
+# CISC_179_52771_dd
 
+Repository for Intro to Python
+
+This is my first github anything. 
+
+# I was making :pizza by the beach 1.5 years ago, quite a change
