--- a/README
+++ b/README
@@ -4,4 +4,4 @@ Repository for Intro to Python
 
 This is my first github anything. 
 
-# I was making :pizza by the beach 1.5 years ago, quite a change
+# I was making :pizza by the beach 1.5 years ago, quite a change huh?
